# REMORA

./: .codespell-ignore-words  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE.md  README.md  README.rst
.github/workflows/: c-linter.yml  ci.yml  cleanup-cache.yml  cuda-ci.yml  docs.yml  gcc.yml  hip.yml  macos.yml  style.yml  sycl.yml  windows.yml
CMake/: BuildREMORAExe.cmake  BuildROMSXExe.cmake  FindPNetCDF.cmake  SetAmrexOptions.cmake  SetREMORACompileFlags.cmake  SetROMSXCompileFlags.cmake
Docs/: Doxyfile.breathe.in  Doxyfile.in  main.dox  requirements.txt
Docs/sphinx_doc/: AMReX.rst  Applications_Requirements.rst  ArakawaCGrid.rst  BoundaryConditions.rst  Checkpoint.rst  CouplingToAMRWind.rst  DerivedQuantities.rst  Discretizations.rst  Doxygen.rst  ERFvsWRF.rst  GettingStarted.rst  InputFiles.rst  Inputs.rst  InputsPhysics.rst  Makefile  MeshRefinement.rst  Numerical_Solution_Technique.rst  Particles.rst  Performance.rst  Plotfiles.rst  ProblemSetup.rst  RegressionTests.rst  TimeAdvance.rst  Time_Stepping.rst  Verification.rst  VerticalSCoord.rst  Visualization.rst  boxlib_bits.rst  building.rst  coc.rst  conf.py  index.rst  make.bat  perlmutter.rst  submodule.rst  testing.rst
Docs/sphinx_doc/theory/: DNSvsLES.rst  Equations.rst  Forcings.rst  PBLschemes.rst  UnitsAndConstants.rst  Variables.rst  VerticalMixing.rst
Exec/: CMakeLists.txt  Make.REMORA  Make.ROMSX
Exec/Advection/: CMakeLists.txt  GNUmakefile  README  inputs  inputs_ml  prob.H  prob.cpp
Exec/Channel_Test/: CMakeLists.txt  GNUmakefile  README  inputs  inputs_orlanski  prob.cpp
Exec/DoubleGyre/: CMakeLists.txt  GNUmakefile  README  inputs  prob.H  prob.cpp
Exec/DoublyPeriodic/: CMakeLists.txt  GNUmakefile  README  inputs  inputs_ml  prob.cpp
Exec/IdealMiniGrid/: CMakeLists.txt  GNUmakefile  README.rst  inputs  inputs_cf_orlanski  inputs_chapman_flather  prob.cpp
Exec/OCCAMS/: GNUmakefile  inputs  prob.cpp
Exec/ParticlesOverSeaMount/: CMakeLists.txt  GNUmakefile  README  inputs  inputs_ml  prob.H  prob.cpp
Exec/Seamount/: CMakeLists.txt  GNUmakefile  README.rst  amrvis.defaults  inputs  prob.H  prob.cpp
Exec/Upwelling/: CMakeLists.txt  GNUmakefile  README.rst  amrvis.defaults  inputs  inputs_gls  inputs_ml  prob.H  prob.cpp
Exec/Upwelling_ML/: CMakeLists.txt  GNUmakefile  inputs  prob.H  prob.cpp
Source/: :w  DataStruct.H  Derive.H  Derive.cpp  EOS.H  IndexDefines.H  Make.package  REMORA.H  REMORA.cpp  REMORA_Constants.H  REMORA_DataStruct.H  REMORA_Derive.H  REMORA_Derive.cpp  REMORA_IndexDefines.H  REMORA_SumIQ.cpp  REMORA_Tagging.cpp  REMORA_make_new_level.cpp  ROMSX.H  ROMSX.cpp  ROMSX_Constants.H  ROMSX_SumIQ.cpp  ROMSX_Tagging.cpp  ROMSX_init.cpp  ROMSX_init_bcs.cpp  ROMSX_make_new_level.cpp  main.cpp  prob_common.H
Source/BoundaryConditions/: BoundaryConditions_bndryreg.cpp  BoundaryConditions_cons.cpp  BoundaryConditions_netcdf.cpp  BoundaryConditions_wrfbdy.cpp  BoundaryConditions_xvel.cpp  BoundaryConditions_yvel.cpp  BoundaryConditions_zvel.cpp  Make.package  REMORA_BoundaryConditions_xvel.cpp  REMORA_BoundaryConditions_zvel.cpp  REMORA_FillPatch.cpp  REMORA_FillPatcher.H  REMORA_FillPatcher.cpp  REMORA_PhysBCFunct.H  REMORA_PhysBCFunct.cpp  ROMSX_FillPatch.cpp  ROMSX_PhysBCFunct.H  ROMSX_PhysBCFunct.cpp  TimeInterpolatedData.H
Source/IO/: Checkpoint.cpp  Make.package  NCCheckpoint.cpp  NCColumnFile.cpp  NCFile.H  NCFile.cpp  NCInterface.H  NCInterface.cpp  NCMultiFabFile.cpp  NCPlotFile.cpp  NCWpsFile.H  Plotfile.cpp  REMORA_Checkpoint.cpp  REMORA_NCFile.H  REMORA_NCFile.cpp  REMORA_NCInterface.H  REMORA_NCInterface.cpp  REMORA_NCPlotFile.H  REMORA_NCPlotFile.cpp  REMORA_Plotfile.cpp  REMORA_ReadFromBdryNetcdf.cpp  REMORA_ReadFromInitNetcdf.cpp  REMORA_console_io.cpp  ReadFromBdryNetcdf.cpp  ReadFromInitNetcdf.cpp  ReadFromWRFBdy.cpp  ReadFromWRFInput.cpp  console_io.cpp  writeJobInfo.cpp
Source/Initialization/: Make.package  REMORA_init.cpp  REMORA_init1d.cpp  REMORA_init_bcs.cpp  REMORA_init_from_netcdf.cpp  REMORA_make_new_level.cpp  REMORA_prob_common.H  ROMSX_init.cpp  ROMSX_init1d.cpp  ROMSX_init_bcs.cpp  ROMSX_init_from_netcdf.cpp  prob_common.H
Source/Particles/: Make.package  ParticleData.H  REMORA_PC.H  REMORA_PC_Evolve.cpp  REMORA_PC_Init.cpp  REMORA_PC_Utils.cpp  REMORA_ParticleData.H  REMORA_Tracers.cpp  TerrainFittedPC.H  TerrainFittedPC.cpp  TracerPC.H  TracerPC.cpp
Source/TimeIntegration/: Make.package  REMORA_Advance.cpp  REMORA_ComputeTimestep.cpp  REMORA_TimeStep.cpp  REMORA_TimeStepML.cpp  REMORA_advance_2d.cpp  REMORA_advance_2d_onestep.cpp  REMORA_advance_3d.cpp  REMORA_advance_3d_ml.cpp  REMORA_coriolis.cpp  REMORA_gls.cpp  REMORA_prestep.cpp  REMORA_prestep_diffusion.cpp  REMORA_prestep_t_advection.cpp  REMORA_prsgrd.cpp  REMORA_rho_eos.cpp  REMORA_rhs_t_3d.cpp  REMORA_rhs_uv_2d.cpp  REMORA_rhs_uv_3d.cpp  REMORA_scale_rhs_vars.cpp  REMORA_set_weights.cpp  REMORA_setup_step.cpp  REMORA_t3dmix.cpp  REMORA_update_massflux_3d.cpp  REMORA_uv3dmix.cpp  REMORA_vert_mean_3d.cpp  REMORA_vert_visc_3d.cpp  ROMSX_Advance.cpp  ROMSX_ComputeTimestep.cpp  ROMSX_TimeStep.cpp  ROMSX_TimeStepML.cpp  ROMSX_TimeStepping.cpp  ROMSX_advance_2d.cpp  ROMSX_advance_2d_onestep.cpp  ROMSX_advance_3d.cpp  ROMSX_advance_3d_ml.cpp  ROMSX_coriolis.cpp  ROMSX_prestep.cpp  ROMSX_prestep_diffusion.cpp  ROMSX_prestep_t_3d.cpp  (+18 more)
Source/TimeIntegration2/: Make.package  ROMSX_Advance.cpp  ROMSX_ComputeTimestep.cpp  ROMSX_TimeStep.cpp
Source/Utils/: DepthStretchTransform.H  Make.package  REMORA_DepthStretchTransform.H  REMORA_Math.H  ROMSX_Math.H  Stretch.H.bak  TerrainMetrics.H  TerrainMetrics.cpp  Utils.H
Tests/: CMakeLists.txt  CTestList.cmake
Tests/REMORA_Gold_Files/Advection_ML/: Header  job_info
Tests/REMORA_Gold_Files/Channel_Test/: Header  job_info
Tests/REMORA_Gold_Files/DoubleGyre/: Header  job_info
Tests/REMORA_Gold_Files/DoublyPeriodic/: Header
Tests/REMORA_Gold_Files/Seamount/: Header  job_info
Tests/REMORA_Gold_Files/Upwelling/: Header  job_info
paper/: paper.bib  paper.md
(+92 files in other folders)
