set(remora_lib_name remora_srclib)
add_library(${remora_lib_name} OBJECT)
include(${CMAKE_SOURCE_DIR}/CMake/BuildREMORAExe.cmake)
build_remora_lib(${remora_lib_name})
add_subdirectory(Seamount)
add_subdirectory(Advection)
add_subdirectory(DoublyPeriodic)
add_subdirectory(Upwelling)
add_subdirectory(Channel_Test)
